--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>8====D</title>
+    <link href="logo_paths.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -13,12 +14,53 @@
       <div class="logo azwaz_c"></div>
     </div>
     <div class="logo_container">
-      <div class="logo azwaz_w"></div>
-      <div class="logo azwaz_c"></div>
+      <div class="logo dnn_w"></div>
+      <div class="logo dnn_c"></div>
     </div>
     <div class="logo_container">
-      <div class="logo azwaz_w"></div>
-      <div class="logo azwaz_c"></div>
+      <div class="logo gtet_w"></div>
+      <div class="logo gtet_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo haz_w"></div>
+      <div class="logo haz_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo kn_w"></div>
+      <div class="logo kn_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo ln_w"></div>
+      <div class="logo ln_c"></div>
+    </div>
+    <!-- RND (big, starts colored) -->
+    <div class="logo_container big">
+      <div class="logo rnd_c big"></div>
+      <div class="logo rnd_w big"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo lvz_w"></div>
+      <div class="logo lvz_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo maz_w"></div>
+      <div class="logo maz_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo np_w"></div>
+      <div class="logo np_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo oz_w"></div>
+      <div class="logo oz_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo paz_w"></div>
+      <div class="logo paz_c"></div>
+    </div>
+    <div class="logo_container">
+      <div class="logo sn_w"></div>
+      <div class="logo sn_c"></div>
     </div>
     <script src="functions.js"></script>
   </body>
